Redirecting to www.ismir2020.net

--- a/hamr/index.html
+++ b/hamr/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/hamr</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/hamr">
-<link rel="canonical" href="https://ismir2020.org/hamr">
+<title>Redirecting to https://www.ismir2020.net/hamr</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/hamr">
+<link rel="canonical" href="https://www.ismir2020.net/hamr">
