--- a/WiMIR/index.html
+++ b/WiMIR/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/WiMIR</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/WiMIR">
-<link rel="canonical" href="https://ismir2020.org/WiMIR">
+<title>Redirecting to https://www.ismir2020.net/WiMIR</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/WiMIR">
+<link rel="canonical" href="https://www.ismir2020.net/WiMIR">
