--- a/c4m/index.html
+++ b/c4m/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/c4m</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/c4m">
-<link rel="canonical" href="https://ismir2020.org/c4m">
+<title>Redirecting to https://www.ismir2020.net/c4m</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/c4m">
+<link rel="canonical" href="https://www.ismir2020.net/c4m">
