--- a/call_for_lbd/index.html
+++ b/call_for_lbd/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/call_for_lbd</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/call_for_lbd">
-<link rel="canonical" href="https://ismir2020.org/call_for_lbd">
+<title>Redirecting to https://www.ismir2020.net/call_for_lbd</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/call_for_lbd">
+<link rel="canonical" href="https://www.ismir2020.net/call_for_lbd">
