--- a/dates/index.html
+++ b/dates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/dates</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/dates">
-<link rel="canonical" href="https://ismir2020.org/dates">
+<title>Redirecting to https://www.ismir2020.net/dates</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/dates">
+<link rel="canonical" href="https://www.ismir2020.net/dates">
