--- a/events/index.html
+++ b/events/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/events</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/events">
-<link rel="canonical" href="https://ismir2020.org/events">
+<title>Redirecting to https://www.ismir2020.net/events</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/events">
+<link rel="canonical" href="https://www.ismir2020.net/events">
