--- a/organizers/index.html
+++ b/organizers/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/organizers</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/organizers">
-<link rel="canonical" href="https://ismir2020.org/organizers">
+<title>Redirecting to https://www.ismir2020.net/organizers</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/organizers">
+<link rel="canonical" href="https://www.ismir2020.net/organizers">
