--- a/registration/index.html
+++ b/registration/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/registration</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/registration">
-<link rel="canonical" href="https://ismir2020.org/registration">
+<title>Redirecting to https://www.ismir2020.net/registration</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/registration">
+<link rel="canonical" href="https://www.ismir2020.net/registration">
