--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/sponsors</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/sponsors">
-<link rel="canonical" href="https://ismir2020.org/sponsors">
+<title>Redirecting to https://www.ismir2020.net/sponsors</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/sponsors">
+<link rel="canonical" href="https://www.ismir2020.net/sponsors">
