--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Redirecting to https://ismir2020.org/tutorials</title>
-<meta http-equiv="refresh" content="0; url=https://ismir2020.org/tutorials">
-<link rel="canonical" href="https://ismir2020.org/tutorials">
+<title>Redirecting to https://www.ismir2020.net/tutorials</title>
+<meta http-equiv="refresh" content="0; url=https://www.ismir2020.net/tutorials">
+<link rel="canonical" href="https://www.ismir2020.net/tutorials">
